[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nosograph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=6.2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.0",
    "biopython>=1.87",
    "pandas>=3.0.0",
    "numpy>=2.4.0",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "testcontainers[neo4j]>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nosograph*"]

[tool.setuptools.package-data]
nosograph = ["cypher/*.cypher"]
